--- a/styles/style.css
+++ b/styles/style.css
@@ -655,18 +655,22 @@ textarea {
 }
 
 .news {
+    position: relative;
     width: 100%;
-    max-width: 400px;
+    max-width: 450px;
     padding: 20px;
     box-sizing: border-box;
     font-family: 'RobotoM';
+    background:#EAE0D7;
+    color: #383737;
 }
 
 .news__title {
     font-size: 24px;
-    font-weight: bold;
+    font-weight: 500;
     margin-bottom: 10px;
     margin-top: 20px;
+    color: black;
 }
 
 .news__excerpt {
@@ -675,10 +679,12 @@ textarea {
 }
 
 .news__read-more {
-    display: block;
-    text-align: right;
+    position: absolute;
+    bottom: 0;
+    right: 0;
     font-size: 16px;
     color: #383737;
+    margin: 0 15px 15px 0;
 }
 
 .news__read-more:hover {
@@ -698,6 +704,45 @@ textarea {
 
 #news__footer {
     flex: 0 0 auto;
+}
+
+
+
+.news__onpage__main {
+    display: flex;
+    max-width: 1500px;
+    margin: 0 auto;
+    font-family: 'RobotoM';
+    color: #383737;
+    background:#EAE0D7;
+    padding: 1%;
+    margin-top: 3%;
+    margin-bottom: 8%;
+}
+
+.news__onpage h2 {
+    font-size: 28px;
+    font-weight: 500;
+    color: black;
+}
+
+.news__onpage p {
+    font-size: 20px;
+    margin-top: 2%;
+    padding-right: 8%;
+}
+
+.news__onpage__image img {
+    max-width: 600px;
+    
+}
+
+#photo-editing {
+    margin-bottom: 13%;
+}
+
+#new-equipment {
+    margin-bottom: 12%;
 }
 
 /* Медиа запросы */
